--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,33 @@
         <jackson.version>2.13.0</jackson.version>
         <mysql.version>8.0.27</mysql.version>
         <HikariCP.version>3.4.5</HikariCP.version>
+        <httpclient.version>4.5.3</httpclient.version>
+        <jsoup.version>1.10.3</jsoup.version>
         <!-- test dependencies-->
         <junit.version>4.12</junit.version>
         <kafka.version>1.0.2</kafka.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
+        </dependency>
+
+        <dependency>
+            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
+            <optional>true</optional>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/cglib/cglib -->
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>${cglib.version}</version>
+            <optional>true</optional>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.objenesis/objenesis -->
         <dependency>
