--- a/pom.xml
+++ b/pom.xml
@@ -15,17 +15,18 @@
         <cglib.version>3.3.0</cglib.version>
         <objenesis.version>3.2</objenesis.version>
         <!-- datasource dependencies -->
+        <mysql.version>8.0.27</mysql.version>
         <mongo.version>3.12.10</mongo.version>
-        <neo4j.version>3.5.5</neo4j.version>
-        <!-- test dependencies-->
-        <junit.version>4.12</junit.version>
-        <kafka.version>1.0.2</kafka.version>
+        <neo4j.embedded.version>3.5.5</neo4j.embedded.version>
+        <neo4j.bolt.version>3.2.10</neo4j.bolt.version>
         <!-- other dependencies-->
         <jackson.version>2.13.0</jackson.version>
-        <mysql.version>8.0.27</mysql.version>
         <HikariCP.version>3.4.5</HikariCP.version>
         <httpclient.version>4.5.3</httpclient.version>
         <jsoup.version>1.10.3</jsoup.version>
+        <kafka.version>1.0.2</kafka.version>
+        <!-- test dependencies-->
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
@@ -110,7 +111,13 @@
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
-            <version>${neo4j.version}</version>
+            <version>${neo4j.embedded.version}</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-ogm-bolt-driver</artifactId>
+            <version>${neo4j.bolt.version}</version>
             <optional>true</optional>
         </dependency>
     </dependencies>
